# tradingbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  symbols.json
deploy/: logrotate.conf  setup.sh  tradingbot.service
docs/: ARCHITECTURE.md  sns_content.md
md/: PIPELINE_v5.0.md  ROADMAP.md  STEP0.md  STEP1.md  STEP2(향후보완).md  STEP2.md  STEP3.md  STEP4.md  STEP5.md  STEP6.md  STEP7.md  UPGRADED_PIPELINE_v3.0.md  UPGRADED_PIPELINE_v4.0.md
params/s1/: params.json
params/s2/: params.json
params/s3/: params.json
params/s4/: params.json
reports/: backtest_3yr_report.md
scripts/: analyze.py  coin_screener.py  integration_test.py  long_short_analysis.py  monitor.py  preflight.py
src/: main.py
src/ai/: market_advisor.py
src/backtest/: __init__.py  __main__.py  engine.py  metrics.py  report.py
src/collector/: collector.py  historical.py  ws_client.py
src/dashboard/: app.py
src/dashboard/templates/: index.html
src/exchange/: executor.py  hyperliquid.py  reconciliation.py
src/notify/: __init__.py  telegram.py
src/openclaw/: __init__.py  evolver.py
src/pipeline/: equity_tracker.py  models.py  phase1_safety.py  phase2_read.py  phase3_scan.py  phase4_gate.py  phase5_execute.py  position_manager.py  runner.py  screener_scheduler.py
src/pipeline/scan/: __init__.py  candlestick.py  chart_patterns.py  inflection.py  sr_levels.py  trendlines.py  volume_profile.py
src/utils/: async_helpers.py  config.py  db.py  health.py  indicators.py  market_stats.py  params.py
