[project]
name = "tradingbot"
version = "0.1.0"
description = "4-Agent Autonomous Crypto Futures Trading System"
requires-python = ">=3.12"
dependencies = [
    "hyperliquid-python-sdk>=0.4.0",
    "websockets>=13.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
